add and modify more questions